# HomeSwap

./: .gitignore  LICENSE  README.md
main_hms/: .dockerignore  .env-non-dev  .gitignore  Dockerfile  Makefile  add_elasticsearch_to_hosts.sh  db.sqlite3  docker-compose.yml  dump.rdb  entrypoint.sh  logstash.conf  manage.py  mongo_db.py  nginx.conf  pyproject.toml  req.txt  requirements.txt
main_hms/api/: urls.py
main_hms/chat/: consumers.py  models.py  routing.py  tasks.py  tests.py  urls.py  views.py
main_hms/chat/migrations/: 0001_initial.py  0002_initial.py
main_hms/chat/templates/chat/: chat.html  chat_index.html
main_hms/main_hms/: asgi.py  backends.py  celery.py  forms.py  serializers.py  settings.py  tests.py  urls.py  views.py  wsgi.py
main_hms/main_hms/templates/main_hms/: about.html  access_denied.html  base.html  index.html  login.html  logout.html  password_reset_complete.html  password_reset_email.html  password_reset_form.html  register.html  success.html  success_auth.html  success_reg.html
main_hms/payment/: models.py  tests.py  urls.py  views.py
main_hms/payment/migrations/: 0001_initial.py
main_hms/posts/: admin.py  documents.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
main_hms/posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_posts_slug.py
main_hms/reg_auth/: apps.py  serializers.py  tests.py  urls.py  views.py
main_hms/users/: admin.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
main_hms/users/migrations/: 0001_initial.py  0002_alter_user_slug.py
(+18 files in other folders)
